examples/nginx-test/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: nginx-test-cert
      hosts:
        - valueFrom:
            configMapKeyRef:
              name: nginx-test
              key: domain
  rules:
  - host: 
      name: email
      valueFrom:
        configMapKeyRef:
          name: nginx-test
          key: domain
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx
              port:
                number: 80
